--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -71,3 +71,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/SurvivalGame.SGCharacterAttributes.LostHydrationPerSecond",NewName="/Script/SurvivalGame.SGCharacterAttributes.LostHydrationPerTime")
++PropertyRedirects=(OldName="/Script/SurvivalGame.SGCharacterAttributes.LostHungryPerSecond",NewName="/Script/SurvivalGame.SGCharacterAttributes.LostHungryPerTime")
