Setup Attributes & UI networking

--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -75,3 +75,4 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/SurvivalGame.SGCharacterAttributes.LostHydrationPerSecond",NewName="/Script/SurvivalGame.SGCharacterAttributes.LostHydrationPerTime")
 +PropertyRedirects=(OldName="/Script/SurvivalGame.SGCharacterAttributes.LostHungryPerSecond",NewName="/Script/SurvivalGame.SGCharacterAttributes.LostHungryPerTime")
++FunctionRedirects=(OldName="/Script/SurvivalGame.SGBaseCharacter.Server_Jump",NewName="/Script/SurvivalGame.SGBaseCharacter.Client_Jump")
