--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -78,6 +78,10 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/SurvivalGame.SGCharacterAttributes.LostHungryPerSecond",NewName="/Script/SurvivalGame.SGCharacterAttributes.LostHungryPerTime")
 +FunctionRedirects=(OldName="/Script/SurvivalGame.SGBaseCharacter.Server_Jump",NewName="/Script/SurvivalGame.SGBaseCharacter.Client_Jump")
 +PropertyRedirects=(OldName="/Script/SurvivalGame.SGBaseCharacter.RestorStaminaCoolDown",NewName="/Script/SurvivalGame.SGBaseCharacter.RestoreStaminaCoolDown")
++PropertyRedirects=(OldName="/Script/SurvivalGame.SGCharacterAnimInstance.bIsFalling",NewName="/Script/SurvivalGame.SGCharacterAnimInstance.bIsJumping")
++FunctionRedirects=(OldName="/Script/SurvivalGame.SGBaseCharacter.Server_StartSprint",NewName="/Script/SurvivalGame.SGBaseCharacter.Server_SetAttributesSprint")
++FunctionRedirects=(OldName="/Script/SurvivalGame.SGBaseCharacter.Server_SetAttributesSprint",NewName="/Script/SurvivalGame.SGBaseCharacter.Server_StartAttributesSprint")
++FunctionRedirects=(OldName="/Script/SurvivalGame.SGBaseCharacter.Server_StopSprint",NewName="/Script/SurvivalGame.SGBaseCharacter.Server_StopAttributesSprint")
 
 [/Script/Engine.GameEngine]
 !NetDriverDefinitions=ClearArray
