Update Sprint & Import assets

--- a/SurvivalGame/SurvivalGame.uproject
+++ b/SurvivalGame/SurvivalGame.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.1",
+	"EngineAssociation": "{EC88BD6D-4523-60FE-B68C-B5A90D9C03FB}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
