Update inventory system

--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -84,6 +84,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/SurvivalGame.SGBaseCharacter.Server_StopSprint",NewName="/Script/SurvivalGame.SGBaseCharacter.Server_StopAttributesSprint")
 +PropertyRedirects=(OldName="/Script/SurvivalGame.SGBaseCharacter.EquipmentComponent",NewName="/Script/SurvivalGame.SGBaseCharacter.SGEquipmentComponent")
 +FunctionRedirects=(OldName="/Script/SurvivalGame.ISGInteractableInterface.Interact",NewName="/Script/SurvivalGame.ISGInteractableInterface.DetectedByTraceInteract")
++PropertyRedirects=(OldName="/Script/SurvivalGame.SGInventoryComponent.Slots",NewName="/Script/SurvivalGame.SGInventoryComponent.Items")
 
 [/Script/Engine.GameEngine]
 !NetDriverDefinitions=ClearArray
