Import assets. Multiplayer logic for pick up items
- Import FP body skeletal mesh
- Replicated destroying items on pick up

--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -85,6 +85,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/SurvivalGame.SGBaseCharacter.EquipmentComponent",NewName="/Script/SurvivalGame.SGBaseCharacter.SGEquipmentComponent")
 +FunctionRedirects=(OldName="/Script/SurvivalGame.ISGInteractableInterface.Interact",NewName="/Script/SurvivalGame.ISGInteractableInterface.DetectedByTraceInteract")
 +PropertyRedirects=(OldName="/Script/SurvivalGame.SGInventoryComponent.Slots",NewName="/Script/SurvivalGame.SGInventoryComponent.Items")
++FunctionRedirects=(OldName="/Script/SurvivalGame.SGPlayerCharacter.InteractLineTrace",NewName="/Script/SurvivalGame.SGPlayerCharacter.Client_InteractLineTrace")
 
 [/Script/Engine.GameEngine]
 !NetDriverDefinitions=ClearArray
